--- a/android/app/src/main/res/values/styles.xml
+++ b/android/app/src/main/res/values/styles.xml
@@ -6,4 +6,9 @@
         <item name="android:editTextBackground">@drawable/rn_edit_text_material</item>
     </style>
 
+    <style name="incomingCall" parent="Theme.AppCompat.Light.NoActionBar">color
+        <!-- Customize status bar color   -->
+        <item name="colorPrimaryDark">#000000</item>
+    </style>
+
 </resources>
